fix overflow

--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 18px;
-  background-image: linear-gradient(260deg, hsl(212, 99%, 26%) 0%, #95f0ca   100%);
+  background-color: rgb(69,175,181);
   border: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 10px;
   list-style-type: none;
@@ -18,11 +18,13 @@
   z-index: 2;
   width: 100%;
 
-  height: 70px;
+  height: 45px;
   align-items: center;
 }
 
-
+.last {
+  margin-right: 25px;
+}
 .nav-links {
   width: 40%;
   display: flex;
@@ -38,7 +40,9 @@
 }
 
 .logo-img{
+  position: relative;
   margin-top: 10px;
+  height: 57px;
 
 }
 
@@ -49,3 +53,19 @@
   transition: 0.3s;
 }
 
+.logoutBtn {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.7);
+  border: 0;
+  background-color: transparent;
+  margin-right: 25px;
+  cursor: pointer;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 18px;
+}
+
+.logoutBtn:hover {
+  text-decoration: none;
+  color: white;
+  transition: 0.3s;
+}
