--- a/frontend/src/components/session/session_form.css
+++ b/frontend/src/components/session/session_form.css
@@ -1,7 +1,7 @@
 
 .form-container {
   display: flex;
-  background-color: rgba(58, 139, 185, 0.598);
+  background-color: rgb(69,175,181);
   height: 460px;
   width: 400px;
   box-shadow: 1px 1px 40px;
